# pico-7seg

./: CMakeLists.txt  README.md  main.c
